--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@lottiefiles/dotlottie-react": "^0.12.1",
     "dotenv": "^16.4.7",
     "googleapis": "^144.0.0",
-    "next": "14.2.11",
+    "nanoid": "^5.0.9",
+    "next": "^15.1.6",
     "next-pwa": "^5.6.0",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@types/node": "^22.10.5",
